Fix compiler warning in GDAJythonInterpreter
Change-Id: I28e58a3d1d50c34fc5edfb7320ab4d3302a7d694